build/log/idf_py_stdout_output_21724
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\git\ESPIDF-UDP2DMX\build\bootloader\esp-idf\esptool_py && C:\Users\kdros\.espressif\python_env\idf5.0_py3.10_env\Scripts\python.exe C:/git/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/git/ESPIDF-UDP2DMX/build/bootloader/bootloader.bin"
Bootloader binary size 0x6390 bytes. 0xc70 bytes (11%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache C:\Users\kdros\.espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe  -ID:/git/ESPIDF-UDP2DMX/build/config -ID:/git/ESPIDF-UDP2DMX/main -IC:/git/esp-idf/components/newlib/platform_include -IC:/git/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/git/esp-idf/components/freertos/esp_additions/include/freertos -IC:/git/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/git/esp-idf/components/freertos/esp_additions/include -IC:/git/esp-idf/components/esp_hw_support/include -IC:/git/esp-idf/components/esp_hw_support/include/soc -IC:/git/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/git/esp-idf/components/esp_hw_support/port/esp32/. -IC:/git/esp-idf/components/esp_hw_support/port/esp32/private_include -IC:/git/esp-idf/components/heap/include -IC:/git/esp-idf/components/log/include -IC:/git/esp-idf/components/soc/include -IC:/git/esp-idf/components/soc/esp32/. -IC:/git/esp-idf/components/soc/esp32/include -IC:/git/esp-idf/components/hal/esp32/include -IC:/git/esp-idf/components/hal/include -IC:/git/esp-idf/components/hal/platform_port/include -IC:/git/esp-idf/components/esp_rom/include -IC:/git/esp-idf/components/esp_rom/include/esp32 -IC:/git/esp-idf/components/esp_rom/esp32 -IC:/git/esp-idf/components/esp_common/include -IC:/git/esp-idf/components/esp_system/include -IC:/git/esp-idf/components/esp_system/port/soc -IC:/git/esp-idf/components/esp_system/port/include/private -IC:/git/esp-idf/components/xtensa/include -IC:/git/esp-idf/components/xtensa/esp32/include -IC:/git/esp-idf/components/lwip/include -IC:/git/esp-idf/components/lwip/include/apps -IC:/git/esp-idf/components/lwip/include/apps/sntp -IC:/git/esp-idf/components/lwip/lwip/src/include -IC:/git/esp-idf/components/lwip/port/esp32/include -IC:/git/esp-idf/components/lwip/port/esp32/include/arch -IC:/git/esp-idf/components/esp_event/include -IC:/git/esp-idf/components/esp_netif/include -IC:/git/esp-idf/components/driver/include -IC:/git/esp-idf/components/driver/deprecated -IC:/git/esp-idf/components/driver/esp32/include -IC:/git/esp-idf/components/esp_pm/include -IC:/git/esp-idf/components/esp_ringbuf/include -IC:/git/esp-idf/components/nvs_flash/include -IC:/git/esp-idf/components/esp_partition/include -IC:/git/esp-idf/examples/common_components/protocol_examples_common/include -ID:/git/ESPIDF-UDP2DMX/managed_components/someweisguy__esp_dmx/src -IC:/git/esp-idf/components/esp_timer/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=D:/git/ESPIDF-UDP2DMX=. -fmacro-prefix-map=C:/git/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c D:/git/ESPIDF-UDP2DMX/main/main.c
In file included from D:/git/ESPIDF-UDP2DMX/main/main.c:6:
D:/git/ESPIDF-UDP2DMX/main/main.c: In function 'fade_task':
D:/git/ESPIDF-UDP2DMX/main/main.c:123:70: error: 'start' undeclared (first use in this function); did you mean 'stat'?
  123 |                 ESP_LOGD(TAG, "Fading Kanal %d: %d → %d [%dms]", ch, start, target, duration);
      |                                                                      ^~~~~
C:/git/esp-idf/components/log/include/esp_log.h:410:137: note: in definition of macro 'ESP_LOG_LEVEL'
  410 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
C:/git/esp-idf/components/log/include/esp_log.h:343:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  343 | #define ESP_LOGD( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_DEBUG,   tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
D:/git/ESPIDF-UDP2DMX/main/main.c:123:17: note: in expansion of macro 'ESP_LOGD'
  123 |                 ESP_LOGD(TAG, "Fading Kanal %d: %d → %d [%dms]", ch, start, target, duration);
      |                 ^~~~~~~~
D:/git/ESPIDF-UDP2DMX/main/main.c:123:70: note: each undeclared identifier is reported only once for each function it appears in
  123 |                 ESP_LOGD(TAG, "Fading Kanal %d: %d → %d [%dms]", ch, start, target, duration);
      |                                                                      ^~~~~
C:/git/esp-idf/components/log/include/esp_log.h:410:137: note: in definition of macro 'ESP_LOG_LEVEL'
  410 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
C:/git/esp-idf/components/log/include/esp_log.h:343:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  343 | #define ESP_LOGD( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_DEBUG,   tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
D:/git/ESPIDF-UDP2DMX/main/main.c:123:17: note: in expansion of macro 'ESP_LOGD'
  123 |                 ESP_LOGD(TAG, "Fading Kanal %d: %d → %d [%dms]", ch, start, target, duration);
      |                 ^~~~~~~~
D:/git/ESPIDF-UDP2DMX/main/main.c:123:77: error: 'target' undeclared (first use in this function)
  123 |                 ESP_LOGD(TAG, "Fading Kanal %d: %d → %d [%dms]", ch, start, target, duration);
      |                                                                             ^~~~~~
C:/git/esp-idf/components/log/include/esp_log.h:410:137: note: in definition of macro 'ESP_LOG_LEVEL'
  410 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
C:/git/esp-idf/components/log/include/esp_log.h:343:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  343 | #define ESP_LOGD( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_DEBUG,   tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
D:/git/ESPIDF-UDP2DMX/main/main.c:123:17: note: in expansion of macro 'ESP_LOGD'
  123 |                 ESP_LOGD(TAG, "Fading Kanal %d: %d → %d [%dms]", ch, start, target, duration);
      |                 ^~~~~~~~
D:/git/ESPIDF-UDP2DMX/main/main.c: In function 'udp_server_task':
D:/git/ESPIDF-UDP2DMX/main/main.c:197:19: warning: unused variable 'arg3' [-Wunused-variable]
  197 |             char *arg3 = strtok(NULL, "#");
      |                   ^~~~
ninja: build stopped: subcommand failed.
